<resources>
    <string name="app_name">Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="login">email</string>
    <string name="signin">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="settings">settings</string>
    <string name="songs">мои аудиозаписи</string>
    <string name="favourites">favourites</string>
    <string name="popular">popular</string>
    <string name="recently_listened">recently listened</string>
    <string name="news">new</string>
</resources>